# serializer version: 1
# name: test_browse_media[category_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.VIDEO: 'video'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/gameclips',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': None,
        'title': 'Gameclips',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.IMAGE: 'image'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/screenshots',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': None,
        'title': 'Screenshots',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.VIDEO: 'video'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': None,
        'title': 'Community gameclips',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.IMAGE: 'image'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': None,
        'title': 'Community screenshots',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.IMAGE: 'image'>,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': None,
        'title': 'Game media',
      }),
    ]),
    'children_media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_class': <MediaClass.GAME: 'game'>,
    'media_content_id': 'media-source://xbox/271958441785640/1297287135',
    'media_content_type': <MediaClass.GAME: 'game'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae / Blue Dragon',
  })
# ---
# name: test_browse_media[community_gameclips_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips/0829f20b-604b-483e-89ff-d37d1071cd70',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t3011.media.xboxlive.com/xuid-2535458333395495-public/0829f20b-604b-483e-89ff-d37d1071cd70_Thumbnail.PNG',
        'title': '8 hours',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips/6fa2731a-8b58-4aa6-848c-4bf15734358b',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t3021.media.xboxlive.com/xuid-2535458333395495-public/6fa2731a-8b58-4aa6-848c-4bf15734358b_Thumbnail.PNG',
        'title': '8 hours',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips/37956427-4118-4b3e-aecb-f3f96ef34e6e',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t2014.media.xboxlive.com/xuid-2535458333395495-public/37956427-4118-4b3e-aecb-f3f96ef34e6e_Thumbnail.PNG',
        'title': '8 hours',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips/6aecd078-be33-4d52-853a-a78c0c678b45',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t3020.media.xboxlive.com/xuid-2535458333395495-public/6aecd078-be33-4d52-853a-a78c0c678b45_Thumbnail.PNG',
        'title': '8 hours',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips/84bdc7a5-fa53-4348-9502-4cd804906f3b',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t3019.media.xboxlive.com/xuid-2535458333395495-public/84bdc7a5-fa53-4348-9502-4cd804906f3b_Thumbnail.PNG',
        'title': '8 hours',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips/c06597b0-28ce-4d2f-856d-b7cde9a40f4a',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t2002.media.xboxlive.com/xuid-2535451917097448-public/c06597b0-28ce-4d2f-856d-b7cde9a40f4a_Thumbnail.PNG',
        'title': '15 days',
      }),
    ]),
    'children_media_class': <MediaClass.VIDEO: 'video'>,
    'media_class': <MediaClass.VIDEO: 'video'>,
    'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_gameclips',
    'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae / Blue Dragon / Community gameclips',
  })
# ---
# name: test_browse_media[community_screenshots_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/5eaea123-0111-4682-9e86-34737b09d82f',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t2001.media.xboxlive.com/xuid-2535422966774043-public/5eaea123-0111-4682-9e86-34737b09d82f_Thumbnail.PNG',
        'title': '6 hours | 1080p',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/504a78e5-be24-4020-a245-77cb528e91ea',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t5002.media.xboxlive.com/xuid-2535422966774043-public/504a78e5-be24-4020-a245-77cb528e91ea_Thumbnail.PNG',
        'title': '6 hours | 1080p',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/fc4cf7c4-edfc-4e7b-ba8f-d7e97dff8ea8',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t5001.media.xboxlive.com/xuid-2535459412956058-public/fc4cf7c4-edfc-4e7b-ba8f-d7e97dff8ea8_Thumbnail.PNG',
        'title': '12 hours | 1080p',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/6a719527-a141-4586-8d44-26fec3f1b693',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t4002.media.xboxlive.com/xuid-2535451380716241-public/6a719527-a141-4586-8d44-26fec3f1b693_Thumbnail.PNG',
        'title': '14 hours | 720p',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/12e4d6f4-c33c-4907-9bd8-ae58a3677c10',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t2001.media.xboxlive.com/xuid-2533274961401245-public/12e4d6f4-c33c-4907-9bd8-ae58a3677c10_Thumbnail.PNG',
        'title': '16 hours | 2160p',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/e5b3298e-12fd-48b7-9561-aa75da69bf65',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t5001.media.xboxlive.com/xuid-2533274962064319-public/e5b3298e-12fd-48b7-9561-aa75da69bf65_Thumbnail.PNG',
        'title': '3 days | 1080p',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots/5f53eca2-6558-4301-a619-02b66bfce450',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t5001.media.xboxlive.com/xuid-2533274962064319-public/5f53eca2-6558-4301-a619-02b66bfce450_Thumbnail.PNG',
        'title': '3 days | 1080p',
      }),
    ]),
    'children_media_class': <MediaClass.IMAGE: 'image'>,
    'media_class': <MediaClass.IMAGE: 'image'>,
    'media_content_id': 'media-source://xbox/271958441785640/1297287135/community_screenshots',
    'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae / Blue Dragon / Community screenshots',
  })
# ---
# name: test_browse_media[game_media_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/0',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.35725.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.c4bf34f8-ad40-4af3-914e-a85e75a76bed',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/1',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.64736.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.6491fb2f-52e7-4129-bcbd-d23a67117ae0',
        'title': 'BrandedKeyArt',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/2',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.55545.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.4c2daefb-fbf6-4b90-b392-bf8ecc39a92e',
        'title': 'TitledHeroArt',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/3',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.22570.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.bf29284d-808a-4e4a-beaa-6621c9898d0e',
        'title': 'Poster',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/4',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.55545.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.4c2daefb-fbf6-4b90-b392-bf8ecc39a92e',
        'title': 'SuperHeroArt',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/5',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.45451.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.3abf2cc3-00cc-417d-a93d-97110cdfb261',
        'title': 'BoxArt',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/6',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.35072.13670972585585116.70570f0d-17aa-4f97-b692-5412fa183673.25a97451-9369-4f6b-b66b-3427913235eb',
        'title': 'Logo',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/7',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.45451.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.3abf2cc3-00cc-417d-a93d-97110cdfb261',
        'title': 'FeaturePromotionalSquareArt',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/8',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.38628.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.c2a205af-5146-405b-b2b7-56845351f1f3',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/9',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.22150.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.b147895c-e947-424d-a731-faefc8c9906a',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/10',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.37559.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.479d2dc1-db2d-4ffa-8c54-a2bebb093ec6',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/11',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.32737.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.6a16ae3e-2918-46e9-90d9-232c79cb9d9d',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/12',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.57046.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.0c0dd072-aa27-4e83-9010-474dfbb42277',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/13',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.19315.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.6293a7b7-07ca-4df0-9eea-6018285a0a8d',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/14',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.23374.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.66498a73-52f5-4247-a1e2-d3c84b9b315d',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/15',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.64646.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.83182b76-4294-496d-90a7-f4e31e7aa80a',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/16',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.24470.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.72d2abc3-aa69-4aeb-960b-6f6d25f498e4',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/17',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.15604.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.27cee011-660b-49a4-bd33-38db6fff5226',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/18',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.39987.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.be285efe-78f8-4984-9d28-9159881bacd4',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/19',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.38206.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.2409803d-7378-4a69-a10b-1574ac42b98b',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/20',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.14938.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.ef6ee72c-4beb-45ec-bd10-6235bd6a7c7f',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/21',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.12835.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.6165ee24-df01-44f5-80fe-7411f9366d1c',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/22',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.40786.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.b7607a0d-0101-4864-9bf8-ad889f820489',
        'title': 'Screenshot',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media/23',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.55686.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.ecbb0e91-36a9-4f76-ab1e-5a5de009840e',
        'title': 'Screenshot',
      }),
    ]),
    'children_media_class': <MediaClass.IMAGE: 'image'>,
    'media_class': <MediaClass.IMAGE: 'image'>,
    'media_content_id': 'media-source://xbox/271958441785640/1297287135/game_media',
    'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae / Blue Dragon / Game media',
  })
# ---
# name: test_browse_media[gameclips_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/gameclips/44b7e94d-b3e9-4b97-be73-417be9091e93',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t3017.xboxlive.com/xuid-2669321029139235-public/44b7e94d-b3e9-4b97-be73-417be9091e93_Thumbnail.PNG',
        'title': '8 years',
      }),
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/gameclips/f87cc6ac-c291-4998-9124-d8b36c059b6a',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://gameclipscontent-t2015.xboxlive.com/00097bbbbbbbbb23-f87cc6ac-c291-4998-9124-d8b36c059b6a-public/Thumbnail_Small.PNG?sv=2015-12-11&sr=b&si=DefaultAccess&sig=ikXCzETBJSBPvS8W%2FxoWTCJL%2FGY6PxKpQ0VG6qktnCQ%3D',
        'title': '9 years',
      }),
    ]),
    'children_media_class': <MediaClass.VIDEO: 'video'>,
    'media_class': <MediaClass.VIDEO: 'video'>,
    'media_content_id': 'media-source://xbox/271958441785640/1297287135/gameclips',
    'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae / Blue Dragon / Gameclips',
  })
# ---
# name: test_browse_media[games_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_class': <MediaClass.GAME: 'game'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135',
        'media_content_type': <MediaClass.GAME: 'game'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.64736.65457035095819016.56f55216-1bb9-40aa-8796-068cf3075fc1.6491fb2f-52e7-4129-bcbd-d23a67117ae0',
        'title': 'Blue Dragon',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_class': <MediaClass.GAME: 'game'>,
        'media_content_id': 'media-source://xbox/271958441785640/1560034050',
        'media_content_type': <MediaClass.GAME: 'game'>,
        'thumbnail': 'https://store-images.s-microsoft.com/image/apps.46246.63309362003335928.4079e21b-b00f-4446-a680-6bf9c0eb0158.c976135a-831a-4cf6-a39b-f01c633567bc',
        'title': "Assassin's Creed® Syndicate",
      }),
    ]),
    'children_media_class': <MediaClass.GAME: 'game'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'media-source://xbox/271958441785640',
    'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae',
  })
# ---
# name: test_browse_media[screenshots_view]
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': False,
        'can_play': True,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.VIDEO: 'video'>,
        'media_content_id': 'media-source://xbox/271958441785640/1297287135/screenshots/41593644-be22-43d6-b224-c7bebe14076e',
        'media_content_type': <MediaClass.VIDEO: 'video'>,
        'thumbnail': 'https://screenshotscontent-t5001.xboxlive.com/00097bbbbbbbbb23-41593644-be22-43d6-b224-c7bebe14076e/Thumbnail_Small.PNG?sv=2015-12-11&sr=b&si=DefaultAccess&sig=TcI8NNFJlcGykmjTFzeFKgUz7E9g%2FHKZqSNUoYAlZOM%3D',
        'title': '10 years | 1080p',
      }),
    ]),
    'children_media_class': <MediaClass.IMAGE: 'image'>,
    'media_class': <MediaClass.IMAGE: 'image'>,
    'media_content_id': 'media-source://xbox/271958441785640/1297287135/screenshots',
    'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox / GSR Ae / Blue Dragon / Screenshots',
  })
# ---
# name: test_browse_media_accounts
  dict({
    'can_expand': True,
    'can_play': False,
    'can_search': False,
    'children': list([
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/271958441785640',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': 'https://images-eds-ssl.xboxlive.com/image?url=wHwbXKif8cus8csoZ03RW_ES.ojiJijNBGRVUbTnZKsoCCCkjlsEJrrMqDkYqs3M0aLOK2kxE9mbLm9M2.R0stAQYoDsGCDJxqDzG9WF3oa4rOCjEK7DbZXdBmBWnMrfErA3M_Q4y_mUTEQLqSAEeYFGlGeCXYsccnQMvEecxRg-&format=png',
        'title': 'GSR Ae',
      }),
      dict({
        'can_expand': True,
        'can_play': False,
        'can_search': False,
        'children_media_class': None,
        'media_class': <MediaClass.DIRECTORY: 'directory'>,
        'media_content_id': 'media-source://xbox/277923030577271',
        'media_content_type': <MediaClass.DIRECTORY: 'directory'>,
        'thumbnail': 'https://images-eds-ssl.xboxlive.com/image?url=z951ykn43p4FqWbbFvR2Ec.8vbDhj8G2Xe7JngaTToBrrCmIEEXHC9UNrdJ6P7KIwuPiuIs6TLDV4WsQAGzSwgbaLlf_CiIdb0jJCiBao9CB40sjycuA5l0Jf.hfuP8l&format=png',
        'title': 'Iqnavs',
      }),
    ]),
    'children_media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_class': <MediaClass.DIRECTORY: 'directory'>,
    'media_content_id': 'media-source://xbox',
    'media_content_type': <MediaClass.IMAGE: 'image'>,
    'not_shown': 0,
    'thumbnail': None,
    'title': 'Xbox Game Media',
  })
# ---
